fixed links ver 1.1.3

--- a/pergolas.html
+++ b/pergolas.html
@@ -16,11 +16,11 @@
         <nav class="header__nav">
           <ul class="header__nav-list">
             <li><a href="index.html">Головна</a></li>
-            <li><a href="nama_home/#about">Хто ми?</a></li>
+            <li><a href="/#about">Хто ми?</a></li>
             <li><a href="curtains.html">Штори</a></li>
             <li><a href="pergolas.html">Терасні системи</a></li>
             <li><a href="marquis.html">Маркізи і рефлексолі</a></li>
-            <li><a href="nama_home/#why_us">Чому саме ми?</a></li>
+            <li><a href="/#why_us">Чому саме ми?</a></li>
           </ul>
         </nav>
 
