changed links, animations, logo link

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <header class="header">
       <div class="container">
         <div class="header__logo">
-          <img src="img/nama_icon.svg" alt="Nama Icon" />
+          <a href="index.html">
+            <img src="img/nama_icon.svg" alt="Nama Icon" />
+          </a>
         </div>
 
         <nav class="header__nav">
           <ul class="header__nav-list">
-            <li><a href="index.html">Головна</a></li>
             <li><a href="#about">Хто ми?</a></li>
             <li><a href="curtains.html">Штори</a></li>
             <li><a href="pergolas.html">Терасні системи</a></li>
