--- a/pergolas.html
+++ b/pergolas.html
@@ -10,17 +10,17 @@
     <header class="header">
       <div class="container">
         <div class="header__logo">
-          <img src="img/nama_icon.svg" alt="Nama Icon" />
+          <a href="index.html">
+            <img src="img/nama_icon.svg" alt="Nama Icon" />
+          </a>
         </div>
 
         <nav class="header__nav">
           <ul class="header__nav-list">
             <li><a href="index.html">Головна</a></li>
-            <li><a href="index.html">Хто ми?</a></li>
             <li><a href="curtains.html">Штори</a></li>
             <li><a href="pergolas.html">Терасні системи</a></li>
             <li><a href="marquis.html">Маркізи і рефлексолі</a></li>
-            <li><a href="index.html">Чому саме ми?</a></li>
           </ul>
         </nav>
 
@@ -124,17 +124,17 @@
     <section class="footer">
       <div class="container">
         <div class="footer__logo">
-          <img src="img/nama_icon_black.svg" alt="Nama Icon" />
+          <a href="index.html">
+            <img src="img/nama_icon_black.svg" alt="Nama Icon Black" />
+          </a>
         </div>
 
         <nav class="footer__nav">
           <ul class="footer__nav-list">
             <li><a href="index.html">Головна</a></li>
-            <li><a href="index.html">Хто ми?</a></li>
             <li><a href="curtains.html">Штори</a></li>
             <li><a href="pergolas.html">Терасні системи</a></li>
             <li><a href="marquis.html">Маркізи і рефлексолі</a></li>
-            <li><a href="index.html">Чому саме ми?</a></li>
           </ul>
         </nav>
 
