--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
     <footer class="footer__bottom">
       <div class="container">
-        <p>Copyright 2024 NAMAHOME. All rights reserved.</p>
+        <p>Copyright 2024 NAMAHOME. <br class = "mobile" /> All rights reserved.</p>
         <div class="footer__links">
           <a href="#">Privacy Policy</a>
           <a href="#">Accessibility</a>
