mobile adaptation (without 768px) 1.1.7

--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
             шторах.
           </div>
           <div class="why-us__images">
+            <div class="img-placeholder"></div>
             <img src="img/why-1.png" alt="Style" />
           </div>
         </div>
@@ -233,7 +234,6 @@
 
         <nav class="footer__nav">
           <ul class="footer__nav-list">
-            <li><a href="index.html">Головна</a></li>
             <li><a href="#about">Хто ми?</a></li>
             <li><a href="curtains.html">Штори</a></li>
             <li><a href="pergolas.html">Терасні системи</a></li>
