added modified text 1.2.1

--- a/index.html
+++ b/index.html
@@ -46,10 +46,13 @@
         <div class="about__content">
           <img src="img/first_image_about.png" alt="First Image About" />
           <div class="about__text">
-            Компанія "Nama" - це команда професіоналів, яка займається
-            виготовленням та встановленням штор, терасних систем, маркіз і
-            рефлексолей. Ми пропонуємо широкий асортимент продукції, що
-            відповідає найвищим стандартам якості.
+            Вже понад 16 років ми створюємо комфорт, стиль і функціональність у просторі за допомогою сучасних сонцезахисних рішень. Наш досвід — це сотні реалізованих проектів: від затишних квартир і приватних будинків до відомих ресторанів, салонів і громадських просторів Харкова.<br/>
+            <br/>Ми спеціалізуємося на:
+            <br/>• римських шторах та класичних текстильних рішеннях,
+            <br/>• деревʼяних жалюзі та рулонних шторах, 
+            <br/>• різних карнизах і системах кріплення,
+            <br/>• маркізах, перголах і зовнішніх сонцезахисних конструкціях.<br/>
+            <br/>Наш підхід — це не просто встановлення. Ми допомагаємо знайти рішення, яке ідеально відповідає вашому інтер’єру, потребам та стилю життя. Уважність до деталей, перевірені матеріали, бездоганний монтаж і повага до кожного замовника — це те, за що нас обирають знову і знову.
           </div>
           <img src="img/second_image_about.png" alt="Second Image About" />
         </div>
