added vid, redesigned btn more proj 1.2.3

--- a/index.html
+++ b/index.html
@@ -43,11 +43,10 @@
     </header>
 
     <section class="first-screen">
-      <img
-        src="img/first_screen.png"
-        alt="First Screen"
-        class="first-screen-img"
-      />
+      <video class="first-screen__video" autoplay muted>
+        <source src="img/main_vid.mp4" type="video/mp4" />
+        Ваш браузер не підтримує відтворення фонового відео.
+      </video>
     </section>
 
     <section class="about" id="about">
