fixed burger, photos 1.2.4

--- a/curtains.html
+++ b/curtains.html
@@ -34,7 +34,7 @@
       <img
         src="img/second_screen.png"
         alt="Second Screen"
-        class="first-screen-img"
+        class="first-screen__img"
       />
     </section>
 
