--- a/marquis.html
+++ b/marquis.html
@@ -34,7 +34,7 @@
       <img
         src="img/fourth_screen.png"
         alt="Fourth Screen"
-        class="first-screen-img"
+        class="first-screen__img"
       />
     </section>
 
