--- a/pergolas.html
+++ b/pergolas.html
@@ -34,7 +34,7 @@
       <img
         src="img/third_screen.png"
         alt="Third Screen"
-        class="first-screen-img"
+        class="first-screen__img"
       />
     </section>
 
