--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <path d="M20.7101 3.6545C20.7101 3.6545 22.6526 2.897 22.4901 4.7365C22.4366 5.494 21.9511 8.1455 21.5731 11.013L20.2781 19.508C20.2781 19.508 20.1701 20.7525 19.1986 20.969C18.2276 21.185 16.7706 20.2115 16.5006 19.995C16.2846 19.8325 12.4536 17.3975 11.1046 16.2075C10.7266 15.8825 10.2946 15.2335 11.1586 14.476L16.8246 9.065C17.4721 8.415 18.1196 6.9 15.4216 8.74L7.86665 13.88C7.86665 13.88 7.00315 14.4215 5.38465 13.9345L1.87665 12.852C1.87665 12.852 0.581647 12.0405 2.79415 11.229C8.19065 8.686 14.8281 6.089 20.7096 3.654"/>
               </svg>
             </a>
-            <a href="#contact-form" class="btn">
+            <a href="#" class="btn open-modal">
               <span class="btn-text">Замовити дзвінок</span>
             </a>
           </div>
@@ -286,7 +286,7 @@
                 <path d="M20.7101 3.6545C20.7101 3.6545 22.6526 2.897 22.4901 4.7365C22.4366 5.494 21.9511 8.1455 21.5731 11.013L20.2781 19.508C20.2781 19.508 20.1701 20.7525 19.1986 20.969C18.2276 21.185 16.7706 20.2115 16.5006 19.995C16.2846 19.8325 12.4536 17.3975 11.1046 16.2075C10.7266 15.8825 10.2946 15.2335 11.1586 14.476L16.8246 9.065C17.4721 8.415 18.1196 6.9 15.4216 8.74L7.86665 13.88C7.86665 13.88 7.00315 14.4215 5.38465 13.9345L1.87665 12.852C1.87665 12.852 0.581647 12.0405 2.79415 11.229C8.19065 8.686 14.8281 6.089 20.7096 3.654"/>
               </svg>
             </a>
-            <a href="#contact-form" class="btn">
+            <a href="#" class="btn open-modal">
               <span class="btn-text">Замовити дзвінок</span>
             </a>
           </div>
@@ -303,6 +303,34 @@
         </div>
       </div>
     </footer>
+
+    <div class="modal" id="callbackModal">
+      <div class="modal__overlay"></div>
+      <div class="modal__content">
+        <div class="modal__side modal__side--image">
+          <img src="img/modal_photo.png" alt="Side фото">
+        </div>
+        <div class="modal__side modal__side--form">
+          <button class="modal__close" aria-label="Закрити">&times;</button>
+          <h2>Давайте обговоримо ваші ідеї!</h2>
+          <p>
+            Відправте нам контактні дані і ми зв’яжемося з вами найближчим часом.<br>
+            Або напишіть нашему менеджеру у Telegram.
+          </p>
+          <form>
+            <input type="text" placeholder="Ваше ім’я" required />
+            <input type="tel" placeholder="+38" required />
+            <button type="submit" class="btn btn--post">Замовити дзвінок</button>
+          </form>
+          <div class="modal__or">або</div>
+          <a href="https://t.me/darkius" target="_blank" class="btn btn--telegram">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+              <path d="M20.7101 3.6545C20.7101 3.6545 22.6526 2.897 22.4901 4.7365C22.4366 5.494 21.9511 8.1455 21.5731 11.013L20.2781 19.508C20.2781 19.508 20.1701 20.7525 19.1986 20.969C18.2276 21.185 16.7706 20.2115 16.5006 19.995C16.2846 19.8325 12.4536 17.3975 11.1046 16.2075C10.7266 15.8825 10.2946 15.2335 11.1586 14.476L16.8246 9.065C17.4721 8.415 18.1196 6.9 15.4216 8.74L7.86665 13.88C7.86665 13.88 7.00315 14.4215 5.38465 13.9345L1.87665 12.852C1.87665 12.852 0.581647 12.0405 2.79415 11.229C8.19065 8.686 14.8281 6.089 20.7096 3.654"/>
+            </svg>
+            Чат в Telegram
+          </a>
+        </div>
+    </div>
 
     <script src="js/main.js"></script>
   </body>
