--- a/marquis.html
+++ b/marquis.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
   <body>
-    <header class="header">
+    <header class="header header-mobile">
       <div class="container">
         <button class="burger-btn" aria-label="Відкрити меню">
           <span></span>
