links for projects 1.3.3

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
               </p>
 
               <div class="project-card__btn">
-                <a href="#" class="btn">Більше проєктів</a>
+                <a href="curtains.html" class="btn">Більше проєктів</a>
               </div>
             </div>
           </div>
@@ -163,7 +163,7 @@
               </p>
 
               <div class="project-card__btn">
-                <a href="#" class="btn">Більше проєктів</a>
+                <a href="pergolas.html" class="btn">Більше проєктів</a>
               </div>
             </div>
           </div>
@@ -194,7 +194,7 @@
               </p>
 
               <div class="project-card__btn">
-                <a href="#" class="btn">Більше проєктів</a>
+                <a href="marquis.html" class="btn">Більше проєктів</a>
               </div>
             </div>
           </div>
