marquis page photo and text 1.3.4

--- a/marquis.html
+++ b/marquis.html
@@ -75,7 +75,7 @@
               </h3>
 
               <p>
-                У світі, де комфорт і естетика мають вирішальне значення, маркізні системи та перголи від нашого салону — це не просто захист від сонця. Це продовження вашого життєвого простору. Це архітектурна досконалість, яка поєднує функціональність, стиль і довговічність.
+                У світі, де комфорт і естетика мають вирішальне значення, маркізні системи від нашого салону — це не просто захист від сонця. Це продовження вашого життєвого простору. Це архітектурна досконалість, яка поєднує функціональність, стиль і довговічність.
               </p>
             </div>
           </div>
@@ -91,11 +91,12 @@
 
             <div class="project-card__info">
               <h3 class="project-card__title">
-                Маркізи — це легкість, витонченість і ефективність. Вони ідеально підходять для терас, балконів, вітрин кафе чи приватних резиденцій. Автоматизовані системи, сенсори вітру та сонця, тканини преміум-класу з UV-захистом — кожна деталь продумана до ідеалу.
+                Zip системи
               </h3>
 
               <p>
-                Перголи — це нова естетика відкритого простору. Стаціонарні або біокліматичні конструкції з рухомими ламелями чи тканинним дахом створюють атмосферу розкоші на подвір’ї, в саду чи на даху. Ідеальне рішення для тих, хто хоче відпочивати на відкритому повітрі у будь-яку пору.
+                Це практичні , надійні , сучасні рішення на всі сезони, надає захист від жари, дощю, вітра та снігу. Сучасне технологічне рішення. 
+                Їх легка подобрать під любий дизайн ваших осель.
               </p>
             </div>
           </div>
