footer bottom edited 1.3.5

--- a/marquis.html
+++ b/marquis.html
@@ -146,11 +146,8 @@
 
     <footer class="footer__bottom">
       <div class="container">
-        <p>Copyright 2024 NAMAHOME. <br class = "mobile" /> All rights reserved.</p>
-        <div class="footer__links">
-          <a href="#">Privacy Policy</a>
-          <a href="#">Accessibility</a>
-        </div>
+        <p>Copyright 2025 NAMAHOME. <br class = "mobile" /> All rights reserved.</p>
+        <p>Діяльність ведеться в межах норм діючого законодавства України</p>
       </div>
     </footer>
 
